# parser-generator

./: CMakeLists.txt  Grammar.g4  README.md  TLexer.g4  gen.sh  hw2.gr  input_grammar.gr  main.cpp
examples/: calculator.gr
src/: Grammar.cpp  Grammar.h  NonTerm.cpp  NonTerm.h  Term.cpp  Term.h  Unit.cpp  Unit.h  main.cpp
